--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "dompurify": "^3.0.7",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
