--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "react-icons": "^5.0.1",
+    "typewriter-effect": "^2.21.0"
   }
 }
