--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
