--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express-async-handler": "^1.2.0",
     "react-icons": "^5.0.1",
+    "sweetalert2": "^11.0.17",
     "typewriter-effect": "^2.21.0"
   }
 }
