--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.10.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
