--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "express-async-handler": "^1.2.0",
+    "moment": "^2.30.1",
     "react-icons": "^5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.0.17",
     "typewriter-effect": "^2.21.0"
   }
