--- a/rohan_backend/rohan_backend/server/package.json
+++ b/rohan_backend/rohan_backend/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
