--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "dompurify": "^3.0.7",
+    "moment": "^2.30.1",
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -27,10 +28,12 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
