--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,8 @@
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "sqlite3": "^5.1.6",
-    "stripe": "^11.16.0"
+    "stripe": "^11.16.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
