--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Landing Page",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --forceExit",
     "dev": "nodemon app.js"
   },
   "author": "ReyKan",
@@ -35,5 +35,9 @@
     "path": "^0.12.7",
     "sqlite3": "^5.1.6",
     "stripe": "^11.16.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
