--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,6 @@
     "@mui/material": "^5.14.19",
     "@mui/styled-engine": "^5.14.19",
     "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "dompurify": "^3.0.7",
@@ -64,6 +62,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.5",
+    "jest": "^29.7.0",
     "tailwindcss": "^3.3.6"
   }
 }
