--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage --forceExit",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.5",
     "jest": "^29.7.0",
