--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
+    "http": "^0.0.1-security",
     "jquery": "^3.6.4",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
@@ -33,17 +34,14 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
+    "socket.io": "^4.7.5",
     "sqlite3": "^5.1.6",
-<<<<<<< HEAD
-    "stripe": "^11.16.0"
+    "stripe": "^11.16.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
-=======
-    "stripe": "^11.16.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
->>>>>>> 80d0446b73d59dd5c5fa06dbd6cb28bf6fab0d62
   }
 }
