--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express-async-handler": "^1.2.0",
     "moment": "^2.30.1",
+    "nodemon": "^3.1.0",
     "react-icons": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.7.4",
